# gapp-login

./: LICENSE  README.md  pyproject.toml
src/gapp_login/sms/: __init__.py  alembic.ini  config.py  endpoint.py  endpoints.py  errors.py  models.py  provider.py
src/gapp_login/sms/migrations/: env.py
src/gapp_login/sms/migrations/versions/: 56fd432ac572_initial.py
src/gapp_login/sms/provider/: __init__.py  config.py  tencent.py
src/gapp_login/sms/providers/: tencent.py
src/gapp_login/wechat/: __init__.py  alembic.ini  clients.py  config.py  endpoints.py  models.py  utils.py
src/gapp_login/wechat/migrations/: env.py
src/gapp_login/wechat/migrations/versions/: 0f656e4e6674_added_wechat_app_id_index.py  450921ce3e56_wechat_login_initial.py  95f55997d436_wechat_login_initial.py  b5078e717ec1_wechat_login_initial.py
