[tool.poetry]
name = "gapp-login"
version = "0.2.0"
description = "GINO App extension to support multiple login providers."
authors = ["Fantix King <fantix.king@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
authlib-gino = {version = "^0.3.0", extras = ["app"]}
httpx = "^0.13.3"
python-multipart = "^0.0.5"
cryptography = "^2.9.2"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."gino.app.extensions"]
"login.sms" = "gapp_login.sms.endpoints:init_app"
"login.wechat" = "gapp_login.wechat.endpoints:init_app"

[tool.poetry.plugins."gino.app.migrations"]
"login.sms" = "gapp_login.sms:migrations"
"login.wechat" = "gapp_login.wechat:migrations"

[tool.poetry.plugins."sms.providers"]
"tencent-cloud" = "gapp_login.sms.providers.tencent"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
